Added the binary serial node

--- a/fmBSP/CMakeLists.txt
+++ b/fmBSP/CMakeLists.txt
@@ -27,6 +27,9 @@ rosbuild_add_boost_directories()
 rosbuild_add_executable(serial_node src/serial/serial_node.cpp)
 rosbuild_add_executable(serial_node src/serial/serialInterface.cpp)
 
+rosbuild_add_executable(serial_binary_node src/serial_binary/serial_node.cpp)
+rosbuild_add_executable(serial_binary_node src/serial_binary/serialInterface.cpp)
+
 IF(EXISTS /usr/include/can4linux.h)
 rosbuild_add_executable(can_node src/can/can_node.cpp)
 ENDIF(EXISTS /usr/include/can4linux.h)
