--- a/fmHMI/CMakeLists.txt
+++ b/fmHMI/CMakeLists.txt
@@ -22,6 +22,8 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_gensrv()
 
 rosbuild_add_executable(wiimote_to_twist src/wiimote_to_twist.cpp)
+rosbuild_add_executable(kbhit_move src/kbhit_move/manual_move.cpp)
+rosbuild_add_executable(kbhit_move src/kbhit_move/kbhit.c)
 
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
