--- a/fmSensors/CMakeLists.txt
+++ b/fmSensors/CMakeLists.txt
@@ -29,6 +29,8 @@ rosbuild_add_executable(sparkfun_razor_node src/global_sensors/SparkFun9DOF.cpp)
 rosbuild_add_executable(sparkfun_razor_node src/global_sensors/sparkfun_razor_node.cpp)
 
 rosbuild_add_executable(lms111_node src/local_sensors/lms111_node.cpp)
+rosbuild_add_executable(absolute_encoder_node src/absolute_encoder/absolute_encoder_node.cpp)
+rosbuild_add_executable(absolute_encoder_node src/absolute_encoder/absolute_encoder.cpp)
 
 rosbuild_add_executable(ll_encoder_node src/odometry_feedback/LeineLindeEncoder.cpp)
 rosbuild_add_executable(ll_encoder_node src/odometry_feedback/ll_encoder_node.cpp)
