--- a/fmPSP/CMakeLists.txt
+++ b/fmPSP/CMakeLists.txt
@@ -21,6 +21,9 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined services
 #rosbuild_gensrv()
 
+rosbuild_add_executable(prrr_protocol_node src/Prrr/Prrr_robocard_protocol/PrrrRobocardProtocol.cpp)
+rosbuild_add_executable(prrr_ctrl_node src/Prrr/Prrr_robocard_ctrl/PrrrCtrl.cpp)
+
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
