--- a/fmBSP/CMakeLists.txt
+++ b/fmBSP/CMakeLists.txt
@@ -32,6 +32,8 @@ rosbuild_add_executable(serial_binary_node src/serial_binary/serialInterface.cpp
 
 rosbuild_add_executable(slip_node src/SLIP/SlipProtocol.cpp)
 
+rosbuild_add_executable(serial_bytes_node src/serial_bytes/SerialBytes.cpp)
+
 IF(EXISTS /usr/include/can4linux.h)
 rosbuild_add_executable(can_node src/can/can_node.cpp)
 ENDIF(EXISTS /usr/include/can4linux.h)
