Commented out some stuff that didn't compile.

--- a/fmActuators/CMakeLists.txt
+++ b/fmActuators/CMakeLists.txt
@@ -26,9 +26,9 @@ rosbuild_add_boost_directories()
 rosbuild_add_executable(aes25_node src/Topcon_AES25/AES-25_electric_steering.cpp)
 rosbuild_add_executable(aes25_node src/Topcon_AES25/AES-25_node.cpp)
 
-rosbuild_add_executable(testnode_rtq src/RoboteQ/testnode_rtq.cpp)
+#rosbuild_add_executable(testnode_rtq src/RoboteQ/testnode_rtq.cpp)
 
-rosbuild_add_executable(roboteq_node src/RoboteQ/rtq_node.cpp)
+#rosbuild_add_executable(roboteq_node src/RoboteQ/rtq_node.cpp)
 
 rosbuild_add_executable(isb_cam_trigger src/ISB/isb_camera_trigger_node.cpp src/ISB/isb_pseudo_ts.cpp)
 
