--- a/fmDecisionMakers/CMakeLists.txt
+++ b/fmDecisionMakers/CMakeLists.txt
@@ -21,8 +21,8 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined services
 #rosbuild_gensrv()
 
-rosbuild_add_executable(BS src/behaviour_selectors/in_row_nav_sm/behaviour_selector_node.cpp)
-rosbuild_add_executable(BS src/behaviour_selectors/in_row_nav_sm/behaviour_selector.cpp)
+#rosbuild_add_executable(BS src/behaviour_selectors/in_row_nav_sm/behaviour_selector_node.cpp)
+#rosbuild_add_executable(BS src/behaviour_selectors/in_row_nav_sm/behaviour_selector.cpp)
 
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
