Added the Sparkfun 9DOF parser from Frobolab.

--- a/fmSensors/CMakeLists.txt
+++ b/fmSensors/CMakeLists.txt
@@ -26,7 +26,8 @@ rosbuild_add_executable(gps_node src/global_sensors/gps_node.cpp)
 rosbuild_add_executable(lms111_node src/local_sensors/lms111_node.cpp)
 rosbuild_add_executable(absolute_encoder_node src/absolute_encoder/absolute_encoder_node.cpp)
 rosbuild_add_executable(absolute_encoder_node src/absolute_encoder/absolute_encoder.cpp)
-rosbuild_add_executable(imu_razor_9dof_node src/local_sensors/imu_razor_9dof_node.cpp)
+rosbuild_add_executable(sparkfun_razor_node src/global_sensors/SparkFun9DOF.cpp)
+rosbuild_add_executable(sparkfun_razor_node src/global_sensors/sparkfun_razor_node.cpp)
 
 include_directories(/usr/include/)
 link_directories(/usr/lib/)
